; ModuleID = '/home/carl/AnghaBench/TDengine/src/util/src/extr_tinterpolation.c_doLinearInterpolationImpl.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/util/src/extr_tinterpolation.c_doLinearInterpolationImpl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (double (double, double, double, double, double)* @doLinearInterpolationImpl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal double @doLinearInterpolationImpl(double %0, double %1, double %2, double %3, double %4) #0 {
  %6 = alloca double, align 8
  %7 = alloca double, align 8
  %8 = alloca double, align 8
  %9 = alloca double, align 8
  %10 = alloca double, align 8
  store double %0, double* %6, align 8
  store double %1, double* %7, align 8
  store double %2, double* %8, align 8
  store double %3, double* %9, align 8
  store double %4, double* %10, align 8
  %11 = load double, double* %6, align 8
  %12 = load double, double* %7, align 8
  %13 = load double, double* %6, align 8
  %14 = fsub double %12, %13
  %15 = load double, double* %10, align 8
  %16 = load double, double* %8, align 8
  %17 = fsub double %15, %16
  %18 = fmul double %14, %17
  %19 = load double, double* %9, align 8
  %20 = load double, double* %8, align 8
  %21 = fsub double %19, %20
  %22 = fdiv double %18, %21
  %23 = fadd double %11, %22
  ret double %23
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
